OpenLDAP 2.3 Change Log

OpenLDAP 2.3.36 Engineering

OpenLDAP 2.3.35 Release (2007/04/09)
	Fixed ldapmodify to use correct memory free functions (ITS#4901)
	Fixed slapd acl set minor typo (ITS#4874)
	Fixed slapd entry consistency check in str2entry2 (ITS#4852)
	Fixed slapd ldapi:// credential issue (ITS#4893)
	Fixed slapd str2anlist handling of undefined attrs/OCs (ITS#4854)
	Fixed slapd syncrepl delta-sync modlist free (ITS#4904)
	Added slapd syncrepl retry logging (ITS#4915)
	Fixed slapd zero-length IA5string handling (ITS#4823)
	Fixed slapd-bdb/hdb startup with missing shm env (ITS#4851)
	Fixed slapd-ldap/meta consistency in referral proxying (ITS#4861)
	Fixed slapd-ldap bind cleanup in case of unauthorized idassert
	Fixed slapd-meta search cleanup
	Fixed slapd-meta/slapo-rwm filter mapping
	Fixed slapd-sql subtree shortcut (ITS#4856)
	Fixed slapo-dynlist crasher (ITS#4891)
	Fixed slapo-refint config message (ITS#4853)
	Fixed libldap time_t signedness (ITS#4872)
	Fixed libldap_r tpool reset (ITS#4855,#4899)
	Documentation
		Misc Doc fixes (ITS#4863, ITS#4877, ITS#4885, ITS#4897)

OpenLDAP 2.3.34 Release (2007/02/16)
	Fixed libldap missing get_option(TLS CipherSuite) (ITS#4815)
	Fixed ldapmodify printing error from ldap_result() (ITS#4812)
	Fixed slapadd LDIF parsing (ITS#4817)
	Fixed slapd libltdl link ordering (ITS#4830)
	Fixed slapd syncrepl memory leaks (ITS#4805)
	Fixed slapd dynacl/ACI compatibility with 2.1
	Fixed slapd-bdb/hdb be_entry_get with aliases/referrals (ITS#4810)
	Fixed slapd-ldap more response handling bugs (ITS#4782)
	Fixed slapd-ldap C-API code tests (ITS#4808)
	Fixed slapd-monitor NULL printf (ITS#4811)
	Fixed slapo-chain spurious additional info in response (ITS#4828)
	Fixed slapo-syncprov presence list (ITS#4813)
	Fixed slapo-syncprov contextCSN checkpoint again (ITS#4720)
	Added slapo-ppolicy cn=config support (ITS#4836)
	Added slapo-auditlog cn=config support
	Build environment
		Added Berkeley DB 4.5 detection
	Documentation